[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cplx-gmm"
version = "0.1.0"
description = "Complex-valued Gaussian mixture models with a scikit-learn-like API."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
]
keywords = [
    "complex-valued",
    "gaussian mixture model",
    "GMM",
    "expectation maximization",
    "signal processing",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/benediktfesl/cplx-gmm"
Repository = "https://github.com/benediktfesl/cplx-gmm"
Issues = "https://github.com/benediktfesl/cplx-gmm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = [
    "D100",  # missing module docstring
    "D104",  # missing package docstring
    "D203",  # incompatible with D211
    "D212",  # incompatible with D213
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]